--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "axios": "^1.6.8",
     "element-plus": "^2.7.0",
     "marked": "^12.0.1",
     "pinia": "^2.1.7",
