--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -1,31 +1,41 @@
-name: Terakoya
- 
+name: Terakoya Deploy
+
 on:
   push:
     branches:
       - main
- 
+  pull_request:
+
 jobs:
   deploy:
-    runs-on: ubuntu-20.04
- 
+    runs-on: ubuntu-22.04
+    permissions:
+      contents: write
+    concurrency:
+      group: ${{ github.workflow }}-${{ github.ref }}
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
- 
+      - uses: actions/checkout@v3
+
       - name: Setup Node
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3
         with:
           node-version: '20'
- 
-      - name: Install Dependencies
-        run: npm install
- 
-      - name: Build
-        run: npm run build
- 
-      - name: Deploy
-        uses: peaceiris/actions-gh-pages@v3
+
+      - name: Cache dependencies
+        uses: actions/cache@v3
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
+
+      - run: npm ci
+      - run: npm test
+      - run: npm run generate
+
+      - name: deploy
+        uses: peaceiris/actions-gh-pages@v4
+        if: github.ref == 'refs/heads/main'
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./dist
