--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -29,7 +29,7 @@ jobs:
           node-version: 'latest'
           cache: 'pnpm'
 
-      - run: pnpm test
+      - run: pnpm install
       - run: pnpm run generate
 
       - name: deploy
