--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -30,7 +30,7 @@ jobs:
           cache: 'pnpm'
 
       - run: pnpm install --production
-      - run: pnpm run generate
+      - run: pnpm run build
 
       - name: deploy
         uses: peaceiris/actions-gh-pages@v4
