--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -29,7 +29,7 @@ jobs:
           node-version: 'latest'
           cache: 'pnpm'
 
-      - run: pnpm install --production
+      - run: pnpm install --production --save
       - run: pnpm run build-only
 
       - name: deploy
