--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -29,7 +29,9 @@ jobs:
           node-version: 'latest'
           cache: 'pnpm'
 
-      - run: pnpm install --production --save
+      - run: pnpm config set @fortawesome:registry https://registry.npmjs.org/
+
+      - run: pnpm install --production
       - run: pnpm run build-only
 
       - name: deploy
