--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -29,7 +29,7 @@ jobs:
           node-version: 'latest'
           cache: 'pnpm'
 
-      - run: pnpm config set registry registry=http://registry.npm.taobao.org/
+      - run: pnpm config set registry registry=https://registry.npmmirror.com/
 
       - run: pnpm install --production
       - run: pnpm run build-only
