--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -18,21 +18,13 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Setup Pnpm
-        uses: pnpm/action-setup@v3
-        with:
-          version: 'latest'
-
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: 'latest'
-          cache: 'pnpm'
 
-      - run: pnpm config set registry registry=https://registry.npmmirror.com/
-
-      - run: pnpm install --production
-      - run: pnpm run build-only
+      - run: npm install --production
+      - run: npm run build-only
 
       - name: deploy
         uses: peaceiris/actions-gh-pages@v4
