--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/vue-fontawesome": "^3.0.6",
     "@tsconfig/node20": "^20.1.4",
+    "@types/identicon.js": "^2.3.4",
     "@types/node": "^20.12.5",
     "@vitejs/plugin-vue": "^5.0.4",
     "@vue/tsconfig": "^0.5.1",
     "axios": "^1.6.8",
     "element-plus": "^2.7.0",
+    "identicon.js": "^2.3.3",
     "marked": "^12.0.1",
     "pinia": "^2.1.7",
     "sass": "^1.75.0",
